test_out.txt
   Compiling iris v0.3.0 (C:\Users\Moon\Desktop\Projects\IRIS)
warning: struct `CountPass` is never constructed
   --> src\pass\mod.rs:141:12
    |
141 |     struct CountPass {
    |            ^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `iris` (lib test) generated 1 warning
error[E0609]: no field `sandbox` on type `CliArgs`
   --> src\main.rs:114:20
    |
114 |             if cli.sandbox {
    |                    ^^^^^^^ unknown field
    |
    = note: available fields are: `path`, `emit`, `output`, `run_after_build`, `dump_ir_after` ... and 3 others

For more information about this error, try `rustc --explain E0609`.
error: could not compile `iris` (bin "iris" test) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
